# cosmic

./: .env.template  .gitignore  .prettierrc  CMakeLists.txt  LICENSE  README.md  bun.lockb  cosmic.code-workspace  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
c/: CMakeLists.txt
c/include/: Command.h  color_log.h  commands.h  main.h  main.hpp
c/src/: color_log.c  color_log.cpp  commands.c  main.c  main.cpp
config/: apiPermissionGroups.yml  channels.yaml  mpp_channels.yml  prefixes.yml  services.yml  userscript-header.js
deno/: index.ts  interop.ts
esbuild/: index.jsx
esbuild/sass/: screen.css  screen.css.map  screen.scss
frontend/: index.html
nim/: Makefile
nim/src/: cosmic.nim
prisma/: schema.prisma
scripts/: build-c.sh  build-nim.sh  start-deno.sh
scripts/js/: esbuild.js  userscript.esbuild.js
scripts/sh/: boot.sh  build-c.sh  build-deno.sh  build-nim.sh  build-node.sh  chmod.sh  (+2 more)
src/: Cosmic.ts  CosmicAPI.ts  CosmicCakeFactory.ts  CosmicCakes.ts  CosmicClient.ts  CosmicClientHandler.ts  CosmicColor.ts  CosmicCommandHandler.ts  CosmicCommands.ts  CosmicData.ts  CosmicEventEmitter.ts  CosmicExperience.ts  CosmicFFI.ts  CosmicForeignMessageHandler.ts  CosmicItemBehavior.ts  CosmicItems.ts  CosmicLogger.ts  CosmicPermissionHandler.ts  CosmicRateLimit.ts  CosmicSeasonDetection.ts  CosmicShop.ts  CosmicShopItems.ts  CosmicTypes.ts  CosmicUtil.ts  ffi.ts  index.ts  interop.ts
test/: CosmicCakeFactory.test.ts  CosmicSeasonDetection.test.ts  CosmicShop.test.ts  CosmicUtil.test.ts
userscript/: BrowserLogger.tsx  MPP.d.ts  index.tsx
(+75 files in other folders)
